Interning values
Long(long) in Long has been deprecated and marked for removal
Double(double) in Double has been deprecated and marked for removal
Integer(String) in Integer has been deprecated and marked for removal